# SmartCameraTethering2

./: Cargo.toml  Dockerfile.arm64  build.rs  package.json  smart_camera_tethering_build_script.sh  tsconfig.json  webpack.config.js
assets/css/: app.css
assets/html/: index.html
assets/js/: bundle.js
src/: main.rs  storage.rs
src/camera/: camera_config.rs  capture.rs  connection.rs  mod.rs  post_processing.rs  worker.rs
src/webgui/: mod.rs
src/websocket/: connection.rs  mod.rs  scheme.rs
ts/: index.ts  interface.ts  scheme.ts  websocket.ts
